// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`apiHandler handleEvent lataaProjekti should load a new project from Velho 1`] = `
Object {
  "__typename": "Projekti",
  "kayttoOikeudet": Array [
    Object {
      "__typename": "ProjektiKayttaja",
      "email": "pekka.projari@vayla.fi",
      "etunimi": "Pekka",
      "kayttajatunnus": "A123",
      "muokattavissa": false,
      "organisaatio": "Väylävirasto",
      "sukunimi": "Projari",
      "tyyppi": "PROJEKTIPAALLIKKO",
      "yleinenYhteystieto": true,
    },
    Object {
      "__typename": "ProjektiKayttaja",
      "email": "matti.meikalainen@vayla.fi",
      "etunimi": "Matti",
      "kayttajatunnus": "A000111",
      "muokattavissa": true,
      "organisaatio": "ELY",
      "sukunimi": "Meikäläinen",
      "tyyppi": "VARAHENKILO",
    },
  ],
  "muistiinpano": "Testiprojekti 1:n muistiinpano",
  "oid": "1",
  "tallennettu": false,
  "tyyppi": "TIE",
  "velho": Object {
    "__typename": "Velho",
    "kunnat": undefined,
    "maakunnat": undefined,
    "nimi": "Testiprojekti 1",
    "tyyppi": "TIE",
    "vastuuhenkilonEmail": "pekka.projari@vayla.fi",
  },
}
`;

exports[`apiHandler handleEvent tallennaProjekti should modify permissions from a project successfully 1`] = `
Array [
  "Initial state with projektipaallikko and omistaja",
  Array [
    Object {
      "__typename": "ProjektiKayttaja",
      "email": "pekka.projari@vayla.fi",
      "etunimi": "Pekka",
      "kayttajatunnus": "A123",
      "muokattavissa": false,
      "organisaatio": "Väylävirasto",
      "sukunimi": "Projari",
      "tyyppi": "PROJEKTIPAALLIKKO",
      "yleinenYhteystieto": true,
    },
    Object {
      "__typename": "ProjektiKayttaja",
      "email": "matti.meikalainen@vayla.fi",
      "etunimi": "Matti",
      "kayttajatunnus": "A000111",
      "muokattavissa": true,
      "organisaatio": "ELY",
      "sukunimi": "Meikäläinen",
      "tyyppi": "VARAHENKILO",
    },
  ],
]
`;

exports[`apiHandler handleEvent tallennaProjekti should modify permissions from a project successfully 2`] = `
Array [
  "Create projekti having both projektipaallikko and omistaja",
  Object {
    "kayttoOikeudet": Array [
      Object {
        "email": "pekka.projari@vayla.fi",
        "etunimi": "Pekka",
        "kayttajatunnus": "A123",
        "muokattavissa": false,
        "organisaatio": "Väylävirasto",
        "puhelinnumero": "11",
        "sukunimi": "Projari",
        "tyyppi": "PROJEKTIPAALLIKKO",
        "yleinenYhteystieto": true,
      },
      Object {
        "email": "matti.meikalainen@vayla.fi",
        "etunimi": "Matti",
        "kayttajatunnus": "A000111",
        "muokattavissa": true,
        "organisaatio": "ELY",
        "puhelinnumero": "22",
        "sukunimi": "Meikäläinen",
        "tyyppi": undefined,
        "yleinenYhteystieto": true,
      },
    ],
    "muistiinpano": "Testiprojekti 1:n muistiinpano",
    "oid": "1",
    "tallennettu": true,
    "velho": Object {
      "nimi": "Testiprojekti 1",
      "tyyppi": "TIE",
      "vastuuhenkilonEmail": "pekka.projari@vayla.fi",
    },
  },
]
`;

exports[`apiHandler handleEvent tallennaProjekti should modify permissions from a project successfully 3`] = `
Array [
  "Loaded projekti having both projektipaallikko and omistaja",
  Object {
    "__typename": "Projekti",
    "kayttoOikeudet": Array [
      Object {
        "__typename": "ProjektiKayttaja",
        "email": "pekka.projari@vayla.fi",
        "etunimi": "Pekka",
        "kayttajatunnus": "A123",
        "muokattavissa": false,
        "organisaatio": "Väylävirasto",
        "puhelinnumero": "11",
        "sukunimi": "Projari",
        "tyyppi": "PROJEKTIPAALLIKKO",
        "yleinenYhteystieto": true,
      },
      Object {
        "__typename": "ProjektiKayttaja",
        "email": "matti.meikalainen@vayla.fi",
        "etunimi": "Matti",
        "kayttajatunnus": "A000111",
        "muokattavissa": true,
        "organisaatio": "ELY",
        "puhelinnumero": "22",
        "sukunimi": "Meikäläinen",
        "tyyppi": undefined,
        "yleinenYhteystieto": true,
      },
    ],
    "muistiinpano": "Testiprojekti 1:n muistiinpano",
    "oid": "1",
    "status": "EI_JULKAISTU",
    "tallennettu": true,
    "tyyppi": "TIE",
    "velho": Object {
      "__typename": "Velho",
      "kunnat": undefined,
      "maakunnat": undefined,
      "nimi": "Testiprojekti 1",
      "tyyppi": "TIE",
      "vastuuhenkilonEmail": "pekka.projari@vayla.fi",
    },
  },
]
`;

exports[`apiHandler handleEvent tallennaProjekti should modify permissions from a project successfully 4`] = `
Array [
  "Save projekti having only projektipaallikko",
  Object {
    "aloitusKuulutus": undefined,
    "euRahoitus": undefined,
    "hyvaksymisPaatosVaihe": undefined,
    "jatkoPaatos1Vaihe": undefined,
    "jatkoPaatos2Vaihe": undefined,
    "kasittelynTila": undefined,
    "kayttoOikeudet": Array [
      Object {
        "email": "pekka.projari@vayla.fi",
        "etunimi": "Pekka",
        "kayttajatunnus": "A123",
        "muokattavissa": false,
        "organisaatio": "Väylävirasto",
        "puhelinnumero": "11",
        "sukunimi": "Projari",
        "tyyppi": "PROJEKTIPAALLIKKO",
        "yleinenYhteystieto": true,
      },
    ],
    "kielitiedot": undefined,
    "liittyvatSuunnitelmat": undefined,
    "muistiinpano": undefined,
    "nahtavillaoloVaihe": undefined,
    "oid": "1",
    "salt": "***unittest***",
    "suunnitteluSopimus": undefined,
    "suunnitteluVaihe": undefined,
    "vuorovaikutukset": undefined,
  },
]
`;

exports[`apiHandler handleEvent tallennaProjekti should modify permissions from a project successfully 5`] = `
Array [
  "Loaded projekti having only projektipaallikko",
  Object {
    "__typename": "Projekti",
    "kayttoOikeudet": Array [
      Object {
        "__typename": "ProjektiKayttaja",
        "email": "pekka.projari@vayla.fi",
        "etunimi": "Pekka",
        "kayttajatunnus": "A123",
        "muokattavissa": false,
        "organisaatio": "Väylävirasto",
        "puhelinnumero": "11",
        "sukunimi": "Projari",
        "tyyppi": "PROJEKTIPAALLIKKO",
        "yleinenYhteystieto": true,
      },
    ],
    "muistiinpano": "Testiprojekti 1:n muistiinpano",
    "oid": "1",
    "status": "EI_JULKAISTU",
    "tallennettu": true,
    "tyyppi": "TIE",
    "velho": Object {
      "__typename": "Velho",
      "kunnat": undefined,
      "maakunnat": undefined,
      "nimi": "Testiprojekti 1",
      "tyyppi": "TIE",
      "vastuuhenkilonEmail": "pekka.projari@vayla.fi",
    },
  },
]
`;

exports[`apiHandler handleEvent tallennaProjekti should modify permissions from a project successfully 6`] = `
Array [
  "Save projekti having while adding other user back. There should be projektipaallikko and one user in the projekti now. Projektipaallikko cannot be removed, so it always stays there.",
  Object {
    "aloitusKuulutus": undefined,
    "euRahoitus": undefined,
    "hyvaksymisPaatosVaihe": undefined,
    "jatkoPaatos1Vaihe": undefined,
    "jatkoPaatos2Vaihe": undefined,
    "kasittelynTila": undefined,
    "kayttoOikeudet": Array [
      Object {
        "email": "pekka.projari@vayla.fi",
        "etunimi": "Pekka",
        "kayttajatunnus": "A123",
        "muokattavissa": false,
        "organisaatio": "Väylävirasto",
        "puhelinnumero": "11",
        "sukunimi": "Projari",
        "tyyppi": "PROJEKTIPAALLIKKO",
        "yleinenYhteystieto": true,
      },
      Object {
        "email": "matti.meikalainen@vayla.fi",
        "etunimi": "Matti",
        "kayttajatunnus": "A000111",
        "muokattavissa": true,
        "organisaatio": "ELY",
        "puhelinnumero": "123456789",
        "sukunimi": "Meikäläinen",
        "tyyppi": undefined,
        "yleinenYhteystieto": undefined,
      },
    ],
    "kielitiedot": undefined,
    "liittyvatSuunnitelmat": undefined,
    "muistiinpano": undefined,
    "nahtavillaoloVaihe": undefined,
    "oid": "1",
    "salt": "***unittest***",
    "suunnitteluSopimus": undefined,
    "suunnitteluVaihe": undefined,
    "vuorovaikutukset": undefined,
  },
]
`;

exports[`apiHandler handleEvent tallennaProjekti should modify permissions from a project successfully 7`] = `
Array [
  "Loaded projekti having while adding other user back. There should be projektipaallikko and one user in the projekti now. Projektipaallikko cannot be removed, so it always stays there.",
  Object {
    "__typename": "Projekti",
    "kayttoOikeudet": Array [
      Object {
        "__typename": "ProjektiKayttaja",
        "email": "pekka.projari@vayla.fi",
        "etunimi": "Pekka",
        "kayttajatunnus": "A123",
        "muokattavissa": false,
        "organisaatio": "Väylävirasto",
        "puhelinnumero": "11",
        "sukunimi": "Projari",
        "tyyppi": "PROJEKTIPAALLIKKO",
        "yleinenYhteystieto": true,
      },
      Object {
        "__typename": "ProjektiKayttaja",
        "email": "matti.meikalainen@vayla.fi",
        "etunimi": "Matti",
        "kayttajatunnus": "A000111",
        "muokattavissa": true,
        "organisaatio": "ELY",
        "puhelinnumero": "123456789",
        "sukunimi": "Meikäläinen",
        "tyyppi": undefined,
        "yleinenYhteystieto": undefined,
      },
    ],
    "muistiinpano": "Testiprojekti 1:n muistiinpano",
    "oid": "1",
    "status": "EI_JULKAISTU",
    "tallennettu": true,
    "tyyppi": "TIE",
    "velho": Object {
      "__typename": "Velho",
      "kunnat": undefined,
      "maakunnat": undefined,
      "nimi": "Testiprojekti 1",
      "tyyppi": "TIE",
      "vastuuhenkilonEmail": "pekka.projari@vayla.fi",
    },
  },
]
`;

exports[`apiHandler handleEvent tallennaProjekti should modify permissions from a project successfully 8`] = `
Array [
  "Save projekti having while adding one muokkaaja more. There should be three persons in the projekti now",
  Object {
    "aloitusKuulutus": Object {
      "hankkeenKuvaus": Object {
        "RUOTSI": "På Svenska",
        "SAAME": "Saameksi",
        "SUOMI": "Lorem Ipsum",
      },
      "ilmoituksenVastaanottajat": Object {
        "kunnat": Array [
          Object {
            "id": 491,
            "lahetetty": "2022-09-28T00:00",
            "sahkoposti": "mikkeli@mikke.li",
          },
          Object {
            "id": 178,
            "lahetetty": "2022-09-28T00:00",
            "sahkoposti": "juva@ju.va",
          },
          Object {
            "id": 740,
            "lahetetty": "2022-09-28T00:00",
            "sahkoposti": "savonlinna@savonlin.na",
          },
        ],
        "viranomaiset": Array [
          Object {
            "lahetetty": "2022-09-28T00:00",
            "nimi": "ETELA_SAVO_ELY",
            "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
          },
        ],
      },
      "kuulutusPaiva": "2022-01-02",
      "kuulutusYhteystiedot": Object {
        "yhteysHenkilot": undefined,
        "yhteysTiedot": Array [
          Object {
            "etunimi": "Marko",
            "organisaatio": "Kajaani",
            "puhelinnumero": "0293121213",
            "sahkoposti": "markku.koi@koi.com",
            "sukunimi": "Koi",
          },
        ],
      },
      "siirtyySuunnitteluVaiheeseen": "2999-01-01",
      "uudelleenKuulutus": undefined,
    },
    "euRahoitus": false,
    "hyvaksymisPaatosVaihe": undefined,
    "jatkoPaatos1Vaihe": undefined,
    "jatkoPaatos2Vaihe": undefined,
    "kasittelynTila": undefined,
    "kayttoOikeudet": Array [
      Object {
        "email": "pekka.projari@vayla.fi",
        "etunimi": "Pekka",
        "kayttajatunnus": "A123",
        "muokattavissa": false,
        "organisaatio": "Väylävirasto",
        "puhelinnumero": "11",
        "sukunimi": "Projari",
        "tyyppi": "PROJEKTIPAALLIKKO",
        "yleinenYhteystieto": true,
      },
      Object {
        "email": "matti.meikalainen@vayla.fi",
        "etunimi": "Matti",
        "kayttajatunnus": "A000111",
        "muokattavissa": true,
        "organisaatio": "ELY",
        "puhelinnumero": "123456789",
        "sukunimi": "Meikäläinen",
        "tyyppi": undefined,
        "yleinenYhteystieto": undefined,
      },
      Object {
        "email": "a2@vayla.fi",
        "etunimi": "EtunimiA2",
        "kayttajatunnus": "A2",
        "muokattavissa": true,
        "organisaatio": "Väylävirasto",
        "puhelinnumero": "123456789",
        "sukunimi": "SukunimiA2",
        "tyyppi": undefined,
        "yleinenYhteystieto": undefined,
      },
    ],
    "kielitiedot": Object {
      "ensisijainenKieli": "SUOMI",
      "projektinNimiVieraskielella": "Projektin nimi saameksi",
      "toissijainenKieli": "SAAME",
    },
    "liittyvatSuunnitelmat": undefined,
    "muistiinpano": undefined,
    "nahtavillaoloVaihe": undefined,
    "oid": "1",
    "salt": "***unittest***",
    "suunnitteluSopimus": Object {
      "kunta": 536,
      "logo": "/suunnittelusopimus/logo.gif",
      "yhteysHenkilo": "A2",
    },
    "suunnitteluVaihe": undefined,
    "vuorovaikutukset": undefined,
  },
]
`;

exports[`apiHandler handleEvent tallennaProjekti should modify permissions from a project successfully 9`] = `
Array [
  "Loaded projekti having while adding one muokkaaja more. There should be three persons in the projekti now",
  Object {
    "__typename": "Projekti",
    "aloitusKuulutus": Object {
      "__typename": "AloitusKuulutus",
      "hankkeenKuvaus": Object {
        "RUOTSI": "På Svenska",
        "SAAME": "Saameksi",
        "SUOMI": "Lorem Ipsum",
        "__typename": "HankkeenKuvaukset",
      },
      "ilmoituksenVastaanottajat": Object {
        "__typename": "IlmoituksenVastaanottajat",
        "kunnat": Array [
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 491,
            "lahetetty": "2022-09-28T00:00",
            "sahkoposti": "mikkeli@mikke.li",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 178,
            "lahetetty": "2022-09-28T00:00",
            "sahkoposti": "juva@ju.va",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 740,
            "lahetetty": "2022-09-28T00:00",
            "sahkoposti": "savonlinna@savonlin.na",
          },
        ],
        "viranomaiset": Array [
          Object {
            "__typename": "ViranomaisVastaanottaja",
            "lahetetty": "2022-09-28T00:00",
            "nimi": "ETELA_SAVO_ELY",
            "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
          },
        ],
      },
      "kuulutusPaiva": "2022-01-02",
      "kuulutusYhteystiedot": Object {
        "__typename": "StandardiYhteystiedot",
        "yhteysHenkilot": undefined,
        "yhteysTiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Marko",
            "organisaatio": "Kajaani",
            "puhelinnumero": "0293121213",
            "sahkoposti": "markku.koi@koi.com",
            "sukunimi": "Koi",
          },
        ],
      },
      "muokkausTila": "MUOKKAUS",
      "siirtyySuunnitteluVaiheeseen": "2999-01-01",
      "uudelleenKuulutus": undefined,
    },
    "euRahoitus": false,
    "kayttoOikeudet": Array [
      Object {
        "__typename": "ProjektiKayttaja",
        "email": "pekka.projari@vayla.fi",
        "etunimi": "Pekka",
        "kayttajatunnus": "A123",
        "muokattavissa": false,
        "organisaatio": "Väylävirasto",
        "puhelinnumero": "11",
        "sukunimi": "Projari",
        "tyyppi": "PROJEKTIPAALLIKKO",
        "yleinenYhteystieto": true,
      },
      Object {
        "__typename": "ProjektiKayttaja",
        "email": "matti.meikalainen@vayla.fi",
        "etunimi": "Matti",
        "kayttajatunnus": "A000111",
        "muokattavissa": true,
        "organisaatio": "ELY",
        "puhelinnumero": "123456789",
        "sukunimi": "Meikäläinen",
        "tyyppi": undefined,
        "yleinenYhteystieto": undefined,
      },
      Object {
        "__typename": "ProjektiKayttaja",
        "email": "a2@vayla.fi",
        "etunimi": "EtunimiA2",
        "kayttajatunnus": "A2",
        "muokattavissa": true,
        "organisaatio": "Väylävirasto",
        "puhelinnumero": "123456789",
        "sukunimi": "SukunimiA2",
        "tyyppi": undefined,
        "yleinenYhteystieto": undefined,
      },
    ],
    "kielitiedot": Object {
      "__typename": "Kielitiedot",
      "ensisijainenKieli": "SUOMI",
      "projektinNimiVieraskielella": "Projektin nimi saameksi",
      "toissijainenKieli": "SAAME",
    },
    "muistiinpano": "Testiprojekti 1:n muistiinpano",
    "oid": "1",
    "status": "ALOITUSKUULUTUS",
    "suunnitteluSopimus": Object {
      "__typename": "SuunnitteluSopimus",
      "kunta": 536,
      "logo": "/yllapito/tiedostot/projekti/1/suunnittelusopimus/logo.gif",
      "yhteysHenkilo": "A2",
    },
    "tallennettu": true,
    "tyyppi": "TIE",
    "velho": Object {
      "__typename": "Velho",
      "kunnat": undefined,
      "maakunnat": undefined,
      "nimi": "Testiprojekti 1",
      "tyyppi": "TIE",
      "vastuuhenkilonEmail": "pekka.projari@vayla.fi",
    },
  },
]
`;

exports[`apiHandler handleEvent tallennaProjekti should modify permissions from a project successfully 10`] = `
Object {
  "args": Array [
    Object {
      "Bucket": "hassu-localstack-public",
      "ContentDisposition": "inline; filename*=UTF-8''T412%20Aloituskuulutus.pdf",
      "ContentType": "application/pdf",
      "Key": "tiedostot/suunnitelma/1/aloituskuulutus/T412 Aloituskuulutus.pdf",
      "Metadata": Object {
        "publication-timestamp": "2022-01-02T00:00:00+02:00",
      },
    },
    Object {
      "Bucket": "hassu-localstack-public",
      "ContentDisposition": "inline; filename*=UTF-8''T412%20Aloituskuulutus.pdf",
      "ContentType": "application/pdf",
      "Key": "tiedostot/suunnitelma/1/aloituskuulutus/T412 Aloituskuulutus.pdf",
      "Metadata": Object {
        "publication-timestamp": "2022-01-02T00:00:00+02:00",
      },
    },
    Object {
      "Bucket": "hassu-localstack-public",
      "ContentDisposition": "inline; filename*=UTF-8''T412%20Aloituskuulutus.pdf",
      "ContentType": "application/pdf",
      "Key": "tiedostot/suunnitelma/1/aloituskuulutus/T412 Aloituskuulutus.pdf",
      "Metadata": Object {
        "publication-timestamp": "2022-01-02T00:00:00+02:00",
      },
    },
    Object {
      "Bucket": "hassu-localstack-public",
      "ContentDisposition": "inline; filename*=UTF-8''T412%20Aloituskuulutus.pdf",
      "ContentType": "application/pdf",
      "Key": "tiedostot/suunnitelma/1/aloituskuulutus/T412 Aloituskuulutus.pdf",
      "Metadata": Object {
        "publication-timestamp": "2022-01-02T00:00:00+02:00",
      },
    },
    Object {
      "Bucket": "hassu-localstack-public",
      "ContentDisposition": "inline; filename*=UTF-8''T412_1%20Ilmoitus%20aloituskuulutuksesta.pdf",
      "ContentType": "application/pdf",
      "Key": "tiedostot/suunnitelma/1/aloituskuulutus/T412_1 Ilmoitus aloituskuulutuksesta.pdf",
      "Metadata": Object {
        "publication-timestamp": "2022-01-02T00:00:00+02:00",
      },
    },
    Object {
      "Bucket": "hassu-localstack-public",
      "ContentDisposition": "inline; filename*=UTF-8''T412_1%20Ilmoitus%20aloituskuulutuksesta.pdf",
      "ContentType": "application/pdf",
      "Key": "tiedostot/suunnitelma/1/aloituskuulutus/T412_1 Ilmoitus aloituskuulutuksesta.pdf",
      "Metadata": Object {
        "publication-timestamp": "2022-01-02T00:00:00+02:00",
      },
    },
    Object {
      "Bucket": "hassu-localstack-public",
      "ContentDisposition": "inline; filename*=UTF-8''T412_1%20Ilmoitus%20aloituskuulutuksesta.pdf",
      "ContentType": "application/pdf",
      "Key": "tiedostot/suunnitelma/1/aloituskuulutus/T412_1 Ilmoitus aloituskuulutuksesta.pdf",
      "Metadata": Object {
        "publication-timestamp": "2022-01-02T00:00:00+02:00",
      },
    },
    Object {
      "Bucket": "hassu-localstack-public",
      "ContentDisposition": "inline; filename*=UTF-8''T412_1%20Ilmoitus%20aloituskuulutuksesta.pdf",
      "ContentType": "application/pdf",
      "Key": "tiedostot/suunnitelma/1/aloituskuulutus/T412_1 Ilmoitus aloituskuulutuksesta.pdf",
      "Metadata": Object {
        "publication-timestamp": "2022-01-02T00:00:00+02:00",
      },
    },
    Object {
      "Bucket": "hassu-localstack-yllapito",
      "ContentDisposition": "inline; filename*=UTF-8''T412%20Aloituskuulutus.pdf",
      "ContentType": "application/pdf",
      "Key": "yllapito/tiedostot/projekti/1/aloituskuulutus/T412 Aloituskuulutus.pdf",
      "Metadata": Object {
        "publication-timestamp": "2022-01-02T00:00:00+02:00",
      },
    },
    Object {
      "Bucket": "hassu-localstack-yllapito",
      "ContentDisposition": "inline; filename*=UTF-8''T412%20Aloituskuulutus.pdf",
      "ContentType": "application/pdf",
      "Key": "yllapito/tiedostot/projekti/1/aloituskuulutus/T412 Aloituskuulutus.pdf",
      "Metadata": Object {
        "publication-timestamp": "2022-01-02T00:00:00+02:00",
      },
    },
    Object {
      "Bucket": "hassu-localstack-yllapito",
      "ContentDisposition": "inline; filename*=UTF-8''T412%20Aloituskuulutus.pdf",
      "ContentType": "application/pdf",
      "Key": "yllapito/tiedostot/projekti/1/aloituskuulutus/T412 Aloituskuulutus.pdf",
      "Metadata": Object {
        "publication-timestamp": "2022-01-02T00:00:00+02:00",
      },
    },
    Object {
      "Bucket": "hassu-localstack-yllapito",
      "ContentDisposition": "inline; filename*=UTF-8''T412%20Aloituskuulutus.pdf",
      "ContentType": "application/pdf",
      "Key": "yllapito/tiedostot/projekti/1/aloituskuulutus/T412 Aloituskuulutus.pdf",
      "Metadata": Object {
        "publication-timestamp": "2022-01-02T00:00:00+02:00",
      },
    },
    Object {
      "Bucket": "hassu-localstack-yllapito",
      "ContentDisposition": "inline; filename*=UTF-8''T412_1%20Ilmoitus%20aloituskuulutuksesta.pdf",
      "ContentType": "application/pdf",
      "Key": "yllapito/tiedostot/projekti/1/aloituskuulutus/T412_1 Ilmoitus aloituskuulutuksesta.pdf",
      "Metadata": Object {
        "publication-timestamp": "2022-01-02T00:00:00+02:00",
      },
    },
    Object {
      "Bucket": "hassu-localstack-yllapito",
      "ContentDisposition": "inline; filename*=UTF-8''T412_1%20Ilmoitus%20aloituskuulutuksesta.pdf",
      "ContentType": "application/pdf",
      "Key": "yllapito/tiedostot/projekti/1/aloituskuulutus/T412_1 Ilmoitus aloituskuulutuksesta.pdf",
      "Metadata": Object {
        "publication-timestamp": "2022-01-02T00:00:00+02:00",
      },
    },
    Object {
      "Bucket": "hassu-localstack-yllapito",
      "ContentDisposition": "inline; filename*=UTF-8''T412_1%20Ilmoitus%20aloituskuulutuksesta.pdf",
      "ContentType": "application/pdf",
      "Key": "yllapito/tiedostot/projekti/1/aloituskuulutus/T412_1 Ilmoitus aloituskuulutuksesta.pdf",
      "Metadata": Object {
        "publication-timestamp": "2022-01-02T00:00:00+02:00",
      },
    },
    Object {
      "Bucket": "hassu-localstack-yllapito",
      "ContentDisposition": "inline; filename*=UTF-8''T412_1%20Ilmoitus%20aloituskuulutuksesta.pdf",
      "ContentType": "application/pdf",
      "Key": "yllapito/tiedostot/projekti/1/aloituskuulutus/T412_1 Ilmoitus aloituskuulutuksesta.pdf",
      "Metadata": Object {
        "publication-timestamp": "2022-01-02T00:00:00+02:00",
      },
    },
  ],
  "stub": "putObject",
}
`;

exports[`apiHandler handleEvent tallennaProjekti should modify permissions from a project successfully 11`] = `
Object {
  "args": Object {
    "Bucket": "hassu-localstack-public",
    "CopySource": "hassu-localstack-yllapito/yllapito/tiedostot/projekti/1/suunnittelusopimus/logo.gif",
    "Key": "tiedostot/suunnitelma/1/suunnittelusopimus/logo.gif",
    "Metadata": Object {
      "publication-timestamp": "2022-01-02T00:00:00+02:00",
    },
    "MetadataDirective": "REPLACE",
  },
  "stub": "copyObject",
}
`;

exports[`apiHandler handleEvent tallennaProjekti should modify permissions from a project successfully 12`] = `
Object {
  "args": Array [
    Object {
      "Bucket": "hassu-localstack-yllapito",
      "Key": "yllapito/tiedostot/projekti/1/aloituskuulutus/T412 Aloituskuulutus.pdf",
    },
    Object {
      "Bucket": "hassu-localstack-yllapito",
      "Key": "yllapito/tiedostot/projekti/1/aloituskuulutus/T412_1 Ilmoitus aloituskuulutuksesta.pdf",
    },
  ],
  "stub": "getObject",
}
`;

exports[`apiHandler handleEvent tallennaProjekti should modify permissions from a project successfully 13`] = `
Object {
  "args": Object {
    "Bucket": "hassu-localstack-yllapito",
    "Key": "yllapito/tiedostot/projekti/1/suunnittelusopimus/logo.gif",
  },
  "stub": "headObject",
}
`;

exports[`apiHandler handleEvent tallennaProjekti should modify permissions from a project successfully 14`] = `
Object {
  "args": Array [
    Object {
      "Bucket": "hassu-localstack-yllapito",
      "Key": "yllapito/tiedostot/projekti/1/aloituskuulutus/T412 Aloituskuulutus.pdf",
    },
    Object {
      "Bucket": "hassu-localstack-yllapito",
      "Key": "yllapito/tiedostot/projekti/1/aloituskuulutus/T412 Aloituskuulutus.pdf",
    },
    Object {
      "Bucket": "hassu-localstack-yllapito",
      "Key": "yllapito/tiedostot/projekti/1/aloituskuulutus/T412_1 Ilmoitus aloituskuulutuksesta.pdf",
    },
    Object {
      "Bucket": "hassu-localstack-yllapito",
      "Key": "yllapito/tiedostot/projekti/1/aloituskuulutus/T412_1 Ilmoitus aloituskuulutuksesta.pdf",
    },
  ],
  "stub": "deleteObject",
}
`;

exports[`apiHandler handleEvent tallennaProjekti should modify permissions from a project successfully 15`] = `
Object {
  "__typename": "Projekti",
  "aloitusKuulutus": Object {
    "__typename": "AloitusKuulutus",
    "hankkeenKuvaus": Object {
      "RUOTSI": "På Svenska",
      "SAAME": "Saameksi",
      "SUOMI": "Lorem Ipsum",
      "__typename": "HankkeenKuvaukset",
    },
    "ilmoituksenVastaanottajat": Object {
      "__typename": "IlmoituksenVastaanottajat",
      "kunnat": Array [
        Object {
          "__typename": "KuntaVastaanottaja",
          "id": 491,
          "lahetetty": "2022-09-28T00:00",
          "sahkoposti": "mikkeli@mikke.li",
        },
        Object {
          "__typename": "KuntaVastaanottaja",
          "id": 178,
          "lahetetty": "2022-09-28T00:00",
          "sahkoposti": "juva@ju.va",
        },
        Object {
          "__typename": "KuntaVastaanottaja",
          "id": 740,
          "lahetetty": "2022-09-28T00:00",
          "sahkoposti": "savonlinna@savonlin.na",
        },
      ],
      "viranomaiset": Array [
        Object {
          "__typename": "ViranomaisVastaanottaja",
          "lahetetty": "2022-09-28T00:00",
          "nimi": "ETELA_SAVO_ELY",
          "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
        },
      ],
    },
    "kuulutusPaiva": "2022-01-02",
    "kuulutusYhteystiedot": Object {
      "__typename": "StandardiYhteystiedot",
      "yhteysHenkilot": undefined,
      "yhteysTiedot": Array [
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Marko",
          "organisaatio": "Kajaani",
          "puhelinnumero": "0293121213",
          "sahkoposti": "markku.koi@koi.com",
          "sukunimi": "Koi",
        },
      ],
    },
    "muokkausTila": "LUKU",
    "palautusSyy": null,
    "siirtyySuunnitteluVaiheeseen": "2999-01-01",
    "uudelleenKuulutus": undefined,
  },
  "aloitusKuulutusJulkaisu": Object {
    "__typename": "AloitusKuulutusJulkaisu",
    "aloituskuulutusPDFt": Object {
      "SUOMI": Object {
        "__typename": "AloitusKuulutusPDF",
        "aloituskuulutusIlmoitusPDFPath": "/yllapito/tiedostot/projekti/1/aloituskuulutus/T412_1 Ilmoitus aloituskuulutuksesta.pdf",
        "aloituskuulutusPDFPath": "/yllapito/tiedostot/projekti/1/aloituskuulutus/T412 Aloituskuulutus.pdf",
      },
      "__typename": "AloitusKuulutusPDFt",
    },
    "hankkeenKuvaus": Object {
      "RUOTSI": "På Svenska",
      "SAAME": "Saameksi",
      "SUOMI": "Lorem Ipsum",
      "__typename": "HankkeenKuvaukset",
    },
    "hyvaksyja": "A123",
    "hyvaksymisPaiva": "2022-09-28",
    "id": 1,
    "ilmoituksenVastaanottajat": Object {
      "__typename": "IlmoituksenVastaanottajat",
      "kunnat": Array [
        Object {
          "__typename": "KuntaVastaanottaja",
          "id": 491,
          "lahetetty": "2022-09-28T00:00",
          "sahkoposti": "mikkeli@mikke.li",
        },
        Object {
          "__typename": "KuntaVastaanottaja",
          "id": 178,
          "lahetetty": "2022-09-28T00:00",
          "sahkoposti": "juva@ju.va",
        },
        Object {
          "__typename": "KuntaVastaanottaja",
          "id": 740,
          "lahetetty": "2022-09-28T00:00",
          "sahkoposti": "savonlinna@savonlin.na",
        },
      ],
      "viranomaiset": Array [
        Object {
          "__typename": "ViranomaisVastaanottaja",
          "lahetetty": "2022-09-28T00:00",
          "nimi": "ETELA_SAVO_ELY",
          "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
        },
      ],
    },
    "kielitiedot": Object {
      "__typename": "Kielitiedot",
      "ensisijainenKieli": "SUOMI",
      "projektinNimiVieraskielella": "Projektin nimi saameksi",
      "toissijainenKieli": "SAAME",
    },
    "kuulutusPaiva": "2022-01-02",
    "muokkaaja": "A123",
    "siirtyySuunnitteluVaiheeseen": "2999-01-01",
    "suunnitteluSopimus": Object {
      "__typename": "SuunnitteluSopimusJulkaisu",
      "email": "a2@vayla.fi",
      "etunimi": "EtunimiA2",
      "kunta": 536,
      "logo": "/yllapito/tiedostot/projekti/1/suunnittelusopimus/logo.gif",
      "puhelinnumero": "123456789",
      "sukunimi": "SukunimiA2",
    },
    "tila": "HYVAKSYTTY",
    "uudelleenKuulutus": undefined,
    "velho": Object {
      "__typename": "Velho",
      "kunnat": undefined,
      "maakunnat": undefined,
      "nimi": "Testiprojekti 1",
      "tyyppi": "TIE",
      "vastuuhenkilonEmail": "pekka.projari@vayla.fi",
    },
    "yhteystiedot": Array [
      Object {
        "__typename": "Yhteystieto",
        "etunimi": "Pekka",
        "organisaatio": "Väylävirasto",
        "puhelinnumero": "11",
        "sahkoposti": "pekka.projari@vayla.fi",
        "sukunimi": "Projari",
      },
      Object {
        "__typename": "Yhteystieto",
        "etunimi": "Marko",
        "organisaatio": "Kajaani",
        "puhelinnumero": "0293121213",
        "sahkoposti": "markku.koi@koi.com",
        "sukunimi": "Koi",
      },
    ],
  },
  "euRahoitus": false,
  "kayttoOikeudet": Array [
    Object {
      "__typename": "ProjektiKayttaja",
      "email": "pekka.projari@vayla.fi",
      "etunimi": "Pekka",
      "kayttajatunnus": "A123",
      "muokattavissa": false,
      "organisaatio": "Väylävirasto",
      "puhelinnumero": "11",
      "sukunimi": "Projari",
      "tyyppi": "PROJEKTIPAALLIKKO",
      "yleinenYhteystieto": true,
    },
    Object {
      "__typename": "ProjektiKayttaja",
      "email": "matti.meikalainen@vayla.fi",
      "etunimi": "Matti",
      "kayttajatunnus": "A000111",
      "muokattavissa": true,
      "organisaatio": "ELY",
      "puhelinnumero": "123456789",
      "sukunimi": "Meikäläinen",
      "tyyppi": undefined,
      "yleinenYhteystieto": undefined,
    },
    Object {
      "__typename": "ProjektiKayttaja",
      "email": "a2@vayla.fi",
      "etunimi": "EtunimiA2",
      "kayttajatunnus": "A2",
      "muokattavissa": true,
      "organisaatio": "Väylävirasto",
      "puhelinnumero": "123456789",
      "sukunimi": "SukunimiA2",
      "tyyppi": undefined,
      "yleinenYhteystieto": undefined,
    },
  ],
  "kielitiedot": Object {
    "__typename": "Kielitiedot",
    "ensisijainenKieli": "SUOMI",
    "projektinNimiVieraskielella": "Projektin nimi saameksi",
    "toissijainenKieli": "SAAME",
  },
  "muistiinpano": "Testiprojekti 1:n muistiinpano",
  "oid": "1",
  "status": "SUUNNITTELU",
  "suunnitteluSopimus": Object {
    "__typename": "SuunnitteluSopimus",
    "kunta": 536,
    "logo": "/yllapito/tiedostot/projekti/1/suunnittelusopimus/logo.gif",
    "yhteysHenkilo": "A2",
  },
  "tallennettu": true,
  "tyyppi": "TIE",
  "velho": Object {
    "__typename": "Velho",
    "kunnat": undefined,
    "maakunnat": undefined,
    "nimi": "Testiprojekti 1",
    "tyyppi": "TIE",
    "vastuuhenkilonEmail": "pekka.projari@vayla.fi",
  },
}
`;

exports[`apiHandler handleEvent tallennaProjekti should modify permissions from a project successfully 16`] = `
Object {
  "description": "Public version of the projekti",
  "projekti": Object {
    "__typename": "ProjektiJulkinen",
    "aloitusKuulutusJulkaisu": Object {
      "__typename": "AloitusKuulutusJulkaisuJulkinen",
      "aloituskuulutusPDFt": Object {
        "SUOMI": Object {
          "__typename": "AloitusKuulutusPDF",
          "aloituskuulutusIlmoitusPDFPath": "/tiedostot/suunnitelma/1/aloituskuulutus/T412_1 Ilmoitus aloituskuulutuksesta.pdf",
          "aloituskuulutusPDFPath": "/tiedostot/suunnitelma/1/aloituskuulutus/T412 Aloituskuulutus.pdf",
        },
        "__typename": "AloitusKuulutusPDFt",
      },
      "hankkeenKuvaus": Object {
        "RUOTSI": "På Svenska",
        "SAAME": "Saameksi",
        "SUOMI": "Lorem Ipsum",
        "__typename": "HankkeenKuvaukset",
      },
      "kielitiedot": Object {
        "__typename": "Kielitiedot",
        "ensisijainenKieli": "SUOMI",
        "projektinNimiVieraskielella": "Projektin nimi saameksi",
        "toissijainenKieli": "SAAME",
      },
      "kuulutusPaiva": "2022-01-02",
      "siirtyySuunnitteluVaiheeseen": "2999-01-01",
      "suunnitteluSopimus": Object {
        "__typename": "SuunnitteluSopimusJulkaisu",
        "email": "a2@vayla.fi",
        "etunimi": "EtunimiA2",
        "kunta": 536,
        "logo": "/tiedostot/suunnitelma/1/suunnittelusopimus/logo.gif",
        "puhelinnumero": "123456789",
        "sukunimi": "SukunimiA2",
      },
      "tila": "HYVAKSYTTY",
      "uudelleenKuulutus": undefined,
      "velho": Object {
        "__typename": "VelhoJulkinen",
        "asiatunnusELY": undefined,
        "asiatunnusVayla": undefined,
        "kunnat": undefined,
        "kuvaus": undefined,
        "maakunnat": undefined,
        "nimi": "Testiprojekti 1",
        "suunnittelustaVastaavaViranomainen": undefined,
        "toteuttavaOrganisaatio": undefined,
        "tyyppi": "TIE",
        "vaylamuoto": undefined,
      },
      "yhteystiedot": Array [
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Pekka",
          "organisaatio": "Väylävirasto",
          "puhelinnumero": "11",
          "sahkoposti": "pekka.projari@vayla.fi",
          "sukunimi": "Projari",
        },
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Marko",
          "organisaatio": "Kajaani",
          "puhelinnumero": "0293121213",
          "sahkoposti": "markku.koi@koi.com",
          "sukunimi": "Koi",
        },
      ],
    },
    "euRahoitus": false,
    "kielitiedot": Object {
      "__typename": "Kielitiedot",
      "ensisijainenKieli": "SUOMI",
      "projektinNimiVieraskielella": "Projektin nimi saameksi",
      "toissijainenKieli": "SAAME",
    },
    "oid": "1",
    "projektiHenkilot": Array [
      Object {
        "__typename": "ProjektiKayttajaJulkinen",
        "email": "pekka.projari@vayla.fi",
        "etunimi": "Pekka",
        "organisaatio": "Väylävirasto",
        "projektiPaallikko": true,
        "puhelinnumero": "11",
        "sukunimi": "Projari",
      },
    ],
    "status": "ALOITUSKUULUTUS",
    "suunnitteluSopimus": Object {
      "__typename": "SuunnitteluSopimusJulkaisu",
      "email": "a2@vayla.fi",
      "etunimi": "EtunimiA2",
      "kunta": 536,
      "logo": "/tiedostot/suunnitelma/1/suunnittelusopimus/logo.gif",
      "puhelinnumero": "123456789",
      "sukunimi": "SukunimiA2",
    },
    "velho": Object {
      "__typename": "VelhoJulkinen",
      "asiatunnusELY": undefined,
      "asiatunnusVayla": undefined,
      "kunnat": undefined,
      "kuvaus": undefined,
      "maakunnat": undefined,
      "nimi": "Testiprojekti 1",
      "suunnittelustaVastaavaViranomainen": undefined,
      "toteuttavaOrganisaatio": undefined,
      "tyyppi": "TIE",
      "vaylamuoto": undefined,
    },
  },
}
`;
